--- a/app/components/social-media/social-media.module.css
+++ b/app/components/social-media/social-media.module.css
@@ -10,7 +10,7 @@
     font-size: 1.5rem;
     color: #666;
     transition: .5s;
-    margin: 0 0.2rem; /* Add this line */
+    margin: 0 0.2rem;
 }
 
 .socialMediaLink::before {
@@ -44,17 +44,17 @@
         width: 3rem;
         height: 3rem;
         line-height: 2.7rem;
-        font-size: 1.3rem;
+        font-size: 1rem;
     }
 }
 
 /* For mobile devices */
 @media (max-width: 768px) {
     .socialMediaLink {
-        width: 2.6rem;
-        height: 2.6rem;
-        line-height: 2.3rem;
-        font-size: 1.1rem;
+        width: 3.4rem;
+        height: 3.4rem;
+        line-height: 3.1rem;
+        font-size: 1.5rem;
     }
 }
 
